test/corpus/error.txt
====================================
Unexpected string literal prefixes
====================================

const A: &[&str] = &[
    @"asdf",
    <"asdf",
    >"asdf",
    :"asdf"
];

---

(source_file
    (const_item
    name: (identifier)
    type: (reference_type
        type: (array_type
        element: (reference_type
            type: (primitive_type))))
    value: (reference_expression
        value: (array_expression
            (ERROR)
            (string_literal
                (string_content))
            (ERROR)
            (string_literal
                (string_content))
            (ERROR)
            (string_literal
                (string_content))
            (ERROR)
            (string_literal
                (string_content))))))

====================================
Json macro contents
====================================

({ "session_id": session_id, "output": output })

---

(source_file
    (expression_statement
        (parenthesized_expression
            (block
                (ERROR
                    (string_literal
                        (string_content))
                    (identifier)
                    (string_literal
                        (string_content)))
                (identifier)))
        (MISSING ";")))

====================================
Malformed inferred turbofish argument list
====================================

char::<_,, NomErrorType>('#');

---

(source_file
  (expression_statement
    (call_expression
      (generic_function
        (identifier)
        (type_arguments
          (ERROR)
          (type_identifier)))
      (arguments
        (char_literal)))))

====================================
Empty higher-ranked type parameter list
====================================

fn tuple_return() -> (impl Subscriber + for<> LookupSpan<'a>, ()) {}

---

(source_file
  (function_item
    (identifier)
    (parameters)
    (tuple_type
      (bounded_type
        (abstract_type
          (type_identifier))
        (higher_ranked_trait_bound
          (type_parameters
            (type_parameter
              (MISSING type_identifier)))
          (generic_type
            (type_identifier)
            (type_arguments
              (lifetime
                (identifier))))))
      (unit_type))
    (block)))

====================================
Longer json macro contents
====================================

({
    "src": {
        "file1.rs": "fn foo() {}"
        "file2.rs": "fn bar() {}",
    },
    "test": {
        "foo": "bar"
    }
})

---

(source_file
    (expression_statement
        (tuple_expression
            (block
                (ERROR
                    (string_literal
                        (string_content))
                    (string_literal
                        (string_content))
                    (string_literal
                        (string_content))
                    (string_literal
                        (string_content)))
                (string_literal
                    (string_content))
                (ERROR))
                (ERROR
                    (string_literal
                        (string_content))
                    (string_literal
                        (string_content)))
                (string_literal
                    (string_content))
                (ERROR))
        (MISSING ";")))
